yoshimi 1.3.6 M

2015-11-3 Will
- Prepared XML wrapper so that meaningful data can be put
  in 'INFORMATION' not just instrument settings.
- changed menu bar 'Show' to 'View'.

2015-10-31 Will
- Added 'Show' to top menu bar.
- Rationalised top menu bar entries.
- Created 'Reset' button in place of 'Clear all parameters'.
- Added reset to command line.
- Added number of available parts to defaults resetting.

2015-10-29 Will
- Loading scales or state now performs a retune.

2015-10-27 Will
- Fixes microtonal tuning regression.
- Moved old README.txt file to histories.

2015-10-25 Will
- Added command line history patch from of F. Silvain.
- Corrected bank listing regression.

2015-10-24 Will
- Moved cli output call to make it more generic.
- Removed duplicate report code in synthEngine.

2015-10-23 Will
- Implemented unix style paging for command lists from ideas of F. Silvain.
- Implemented command line listing of parts with instruments installed.
- Updated some docs.
- Cleaned up error messages and logs.

2015-10-16 Will
- Implemented load and save of patch sets.

2015-10-12 Will
- Added paging to banks list.

2015-10-11 Will
- Implemented paging (not banks yet).

2015-10-9 Will
- Changed mode return behaviour.
- Changed some command names.

2015-10-8 Will
- Fixed segfault when changing command line mode.
- Added command line history.

2015-10-7 Will
- Brought Andrew's thread and readline into older style command line.
- Further enhancements.

2015-10-6 Will (command)
- Improved readline exit behaviour.
- Added exit command.

2015-10-5 Will
- Further improvements to command line control.
- General code tidying.

2015-10-3 Will
- More improvements to command line control.
- Extended command line vector control.
- Auto generate .config/yoshimi/presets directory.

2015-10-2 Will
- Set up bugfix branch to track only the current release.
- Set version of this to 1.3.6.1

2015-10-1 Will
- First time config search was getting confused if zyn or old style